--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <title>GC252 - 신지호</title>
   </head>
   <body>
-    <h2>GC252 - 신지호</h2>
     <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, quasi,
-      nostrum quos accusantium nulla labore velit quis maxime cupiditate at
-      sapiente similique id omnis, ex quidem dolorum deserunt maiores eaque?
+      <h1>GC252 - 신지호</h1>
+    <h2>w2</h2>
+    <ol>
+      <li><a href="./src/w2/step1/">step1</a></li>
+      <li><a href="./src/w2/step2/">step2</a></li>
+      <li><a href="./src/w2/step3/">step3</a></li>
+    </ol>
+    <h2>w3</h2>
+    <ol>
+      <li><a href="./src/w3/AtClass1/">AtClass1</a></li>
+      <li><a href="./src/w3/AtClass2/">AtClass2</a></li>
+      <li><a href="./src/w3/AtClass3/">AtClass3</a></li>
+      <li><a href="./src/w3/step1/">step1</a></li>
+      <li><a href="./src/w3/step2/">step2</a></li>
+      <li><a href="./src/w3/step3/">step3</a></li>
+      <li><a href="./src/w3/step4/">step4</a></li>
+      <li><a href="./src/w3/step5/">step5</a></li>
+      <li><a href="./src/w3/step6/">step6</a></li>
+      <li><a href="./src/w3/step7/">step7</a></li>
+      <li><a href="./src/w3/step8/">step8</a></li>
+      <li><a href="./src/w3/step9/">step9</a></li>
+    </ol>
     </p>
   </body>
 </html>
