--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@
     <title>GC252 - 신지호</title>
   </head>
   <body>
-    <p>
-      <h1>GC252 - 신지호</h1>
+    <h1>GC252 - 신지호</h1>
     <h2>w2</h2>
     <ol>
       <li><a href="./src/w2/step1/">step1</a></li>
       <li><a href="./src/w2/step2/">step2</a></li>
       <li><a href="./src/w2/step3/">step3</a></li>
     </ol>
-    <h2>w3</h2>
+    <h2>w3 - Particle System</h2>
     <ol>
-      <li><a href="./src/w3/AtClass1/">AtClass1</a></li>
-      <li><a href="./src/w3/AtClass2/">AtClass2</a></li>
-      <li><a href="./src/w3/AtClass3/">AtClass3</a></li>
       <li><a href="./src/w3/step1/">step1</a></li>
       <li><a href="./src/w3/step2/">step2</a></li>
       <li><a href="./src/w3/step3/">step3</a></li>
@@ -29,6 +25,28 @@
       <li><a href="./src/w3/step8/">step8</a></li>
       <li><a href="./src/w3/step9/">step9</a></li>
     </ol>
-    </p>
+    <ol>
+      <li><a href="./src/w3/AtClass1/">AtClass1</a></li>
+      <li><a href="./src/w3/AtClass2/">AtClass2</a></li>
+      <li><a href="./src/w3/AtClass3/">AtClass3</a></li>
+    </ol>
+    <h2>w4 - Physics Simulation</h2>
+    <ol>
+      <li><a href="./src/w4/step1/">step1</a></li>
+      <li><a href="./src/w4/step2/">step2</a></li>
+      <li><a href="./src/w4/step3/">step3</a></li>
+      <li><a href="./src/w4/step4/">step4</a></li>
+      <li><a href="./src/w4/step5/">step5</a></li>
+      <li><a href="./src/w4/step6/">step6</a></li>
+      <li><a href="./src/w4/step7/">step7</a></li>
+      <li><a href="./src/w4/step8/">step8</a></li>
+      <li><a href="./src/w4/step9/">step9</a></li>
+    </ol>
+    <h2>w5 - Autonomous Agent</h2>
+    <ol>
+      <li><a href="./src/w5/step1/">step1</a></li>
+      <li><a href="./src/w5/step2/">step2</a></li>
+      <li><a href="./src/w5/step3/">step3</a></li>
+    </ol>
   </body>
 </html>
