--- a/src/w4/step1/index.html
+++ b/src/w4/step1/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AtClass3</title>
+    <title>step1</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@2.0.5/lib/p5.js"></script>
-    <script src="./skech/particle.js"></script>
     <script src="./skech/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Step1</h1>
+    벽에 튕겨지는 원, 중력이 작용, velocity가 시각적으로 보임, 클릭하면 초기화
+  </body>
 </html>
