--- a/src/w5/step3/index.html
+++ b/src/w5/step3/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AtClass3</title>
+    <title>step3</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@2.0.5/lib/p5.js"></script>
-    <script src="./skech/particle.js"></script>
     <script src="./skech/main.js" defer></script>
+    <script src="./skech/Vehicle.js" defer></script>
   </head>
   <body></body>
 </html>
