--- a/src/w4/step3/index.html
+++ b/src/w4/step3/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AtClass3</title>
+    <title>step3</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@2.0.5/lib/p5.js"></script>
-    <script src="./skech/particle.js"></script>
     <script src="./skech/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Step3</h1>
+    step2 + 공의 갯수 5개로 늘어남 <br />
+    > pos와 vel을 array로 만들어서 사용
+  </body>
 </html>
