--- a/src/w4/step4/index.html
+++ b/src/w4/step4/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AtClass3</title>
+    <title>step4</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@2.0.5/lib/p5.js"></script>
-    <script src="./skech/particle.js"></script>
     <script src="./skech/main.js" defer></script>
+    <script src="./skech/Ball.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Step4</h1>
+    같은 속성의 공 5개 <br />
+    step3 > class로 만들어서 사용
+  </body>
 </html>
