--- a/src/w4/step5/index.html
+++ b/src/w4/step5/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AtClass3</title>
+    <title>step5</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@2.0.5/lib/p5.js"></script>
-    <script src="./skech/particle.js"></script>
     <script src="./skech/main.js" defer></script>
+    <script src="./skech/Ball.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Step5</h1>
+    랜덤 속성(크기, 속도, 색상)의 공 5개 <br />
+    마우스 클릭하는 위치에 새로 생성, 마우스 호버되면 fillX StrokeO
+  </body>
 </html>
