--- a/src/w4/step6/index.html
+++ b/src/w4/step6/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AtClass3</title>
+    <title>step6</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@2.0.5/lib/p5.js"></script>
-    <script src="./skech/particle.js"></script>
     <script src="./skech/main.js" defer></script>
+    <script src="./skech/Ball.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Step6</h1>
+    step5 + 마우스로 원을 움직일 수 있게 <br />
+    shift+클릭시 마우스 위치에 새로고침
+  </body>
 </html>
