--- a/src/w4/step7/index.html
+++ b/src/w4/step7/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AtClass3</title>
+    <title>step7</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/p5@2.0.5/lib/p5.js"></script>
-    <script src="./skech/particle.js"></script>
     <script src="./skech/main.js" defer></script>
+    <script src="./skech/Ball.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Step7</h1>
+    step6에서의 공을 잡을 수 있는 것 + 잡아 던질 수 있는 모션 추가
+  </body>
 </html>
