--- a/index.html
+++ b/index.html
@@ -48,5 +48,14 @@
       <li><a href="./src/w5/step2/">step2</a></li>
       <li><a href="./src/w5/step3/">step3</a></li>
     </ol>
+    <ol>
+      <li><a href="./src/w5/AtClass/">AtClass</a></li>
+    </ol>
+    <h2>w6 - Assignments</h2>
+    <ol>
+      <li><a href="./src/w6Assignments/Flee/">Flee</a></li>
+      <li><a href="./src/w6Assignments/PursueAndEvade/">PursueAndEvade</a></li>
+    </ol>
+    <h2>w6 -</h2>
   </body>
 </html>
