--- a/src/w5/step1/index.html
+++ b/src/w5/step1/index.html
@@ -9,5 +9,7 @@
     <script src="./skech/main.js" defer></script>
     <script src="./skech/Vehicle.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>step1</h1>
+  </body>
 </html>
