--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <h1>GC252 - 신지호</h1>
+    <h2>Assignments</h2>
+    <ol>
+      <li><a href="./src/w6Assignments/Flee/">Flee</a></li>
+      <li><a href="./src/w6Assignments/PursueAndEvade/">PursueAndEvade</a></li>
+    </ol>
     <h2>w2</h2>
     <ol>
       <li><a href="./src/w2/step1/">step1</a></li>
@@ -50,11 +55,6 @@
     </ol>
     <ol>
       <li><a href="./src/w5/AtClass/">AtClass</a></li>
-    </ol>
-    <h2>w6 - Assignments</h2>
-    <ol>
-      <li><a href="./src/w6Assignments/Flee/">Flee</a></li>
-      <li><a href="./src/w6Assignments/PursueAndEvade/">PursueAndEvade</a></li>
     </ol>
     <h2>w6 -</h2>
   </body>
