--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
     <h1>GC252 - 신지호</h1>
     <h2>Assignments</h2>
     <ol>
-      <li><a href="./src/w6Assignments/Flee/">Flee</a></li>
-      <li><a href="./src/w6Assignments/PursueAndEvade/">PursueAndEvade</a></li>
+      <li><a href="./src/Assignments/Flee/">Flee</a></li>
+      <li><a href="./src/Assignments/PursueAndEvade/">PursueAndEvade</a></li>
+      <li><a href="./src/Assignments/EcoSys/">EcoSys</a></li>
     </ol>
+    <hr />
+    <h2>Test</h2>
+    <ol>
+      <li><a href="./src/Test/Test1/">Test1</a></li>
+      <li><a href="./src/Test/Test2/">Test2</a></li>
+      <li><a href="./src/Test/Test3/">Test3</a></li>
+      <li><a href="./src/Test/Test4/">Test4</a></li>
+      <li><a href="./src/Test/Test5/">Test5</a></li>
+    </ol>
+    <hr />
     <h2>w2</h2>
     <ol>
       <li><a href="./src/w2/step1/">step1</a></li>
@@ -56,6 +67,24 @@
     <ol>
       <li><a href="./src/w5/AtClass/">AtClass</a></li>
     </ol>
-    <h2>w6 -</h2>
+    <h2>w6 - ProceduralAnimation</h2>
+    <ol>
+      <li><a href="./src/w6/Step1/">Step1</a></li>
+      <li><a href="./src/w6/Step2/">Step2</a></li>
+    </ol>
+    <ol>
+      <li><a href="./src/w6/AtClass1/">AtClass1</a></li>
+    </ol>
+    <h2>w7 - HTML</h2>
+    <ol>
+      <li><a href="./src/HTML/Step1/index.html">Step1</a></li>
+      <li><a href="./src/HTML/Step2/index.html">Step2</a></li>
+    </ol>
+    <h2>w8 - Matter</h2>
+    <ol>
+      <li><a href="./src/Matter/Step1/index.html">Step1</a></li>
+      <li><a href="./src/Matter/Step2/index.html">Step2</a></li>
+      <li><a href="./src/Matter/Step3/index.html">Step3</a></li>
+    </ol>
   </body>
 </html>
