--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="./src/Assignments/Flee/">Flee</a></li>
       <li><a href="./src/Assignments/PursueAndEvade/">PursueAndEvade</a></li>
       <li><a href="./src/Assignments/EcoSys/">EcoSys</a></li>
+      <li><a href="./src/Assignments/Clock/">Clock</a></li>
     </ol>
     <hr />
     <h2>Test</h2>
@@ -85,6 +86,20 @@
       <li><a href="./src/Matter/Step1/index.html">Step1</a></li>
       <li><a href="./src/Matter/Step2/index.html">Step2</a></li>
       <li><a href="./src/Matter/Step3/index.html">Step3</a></li>
+    </ol>
+    <h2>w11 - Matter</h2>
+    <ol>
+      <li><a href="./src/w11/Step1/">Step1</a></li>
+      <li><a href="./src/w11/RSP/">RSP</a></li>
+    </ol>
+    <h2>w12 - Tile</h2>
+    <ol>
+      <li><a href="./src/w12/AtClass1/">AtClass1</a></li>
+    </ol>
+    <h2>w13 - Moire</h2>
+    <ol>
+      <li><a href="./src/w13/AtClass1/">AtClass1</a></li>
+      <li><a href="./src/w13/AtClass2/">AtClass2</a></li>
     </ol>
   </body>
 </html>
